Implemented convex hulls for object detection

--- a/luna_ws/src/depth_imaging_package/CMakeLists.txt
+++ b/luna_ws/src/depth_imaging_package/CMakeLists.txt
@@ -211,5 +211,6 @@ include_directories(
 catkin_install_python(PROGRAMS 
   src/depth_publisher.py
   src/depth_subscriber.py
+  src/contour_subscriber.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
