Added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,8 @@ Platformio/.pio/build/project.checksum
 Platformio/.vscode/launch.json
 Platformio/.vscode/extensions.json
 Platformio/.vscode/launch.json
+Platformio/.pio/build/project.checksum
+Platformio/.pio/libdeps/megaatmega2560/integrity.dat
+Platformio/.vscode/c_cpp_properties.json
+Platformio/.vscode/extensions.json
+Platformio/.vscode/launch.json
