--- a/Platformio/.vscode/launch.json
+++ b/Platformio/.vscode/launch.json
@@ -12,9 +12,9 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "/home/speeep/Development/Luna/Platformio/.pio/build/megaatmega2560/firmware.elf",
+            "executable": "C:/Users/ianma/Documents/PlatformIO/Projects/Luna/Platformio/.pio/build/megaatmega2560/firmware.elf",
             "projectEnvName": "megaatmega2560",
-            "toolchainBinDir": "/home/speeep/.platformio/packages/toolchain-atmelavr/bin",
+            "toolchainBinDir": "C:/Users/ianma/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
@@ -25,18 +25,18 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/home/speeep/Development/Luna/Platformio/.pio/build/megaatmega2560/firmware.elf",
+            "executable": "C:/Users/ianma/Documents/PlatformIO/Projects/Luna/Platformio/.pio/build/megaatmega2560/firmware.elf",
             "projectEnvName": "megaatmega2560",
-            "toolchainBinDir": "/home/speeep/.platformio/packages/toolchain-atmelavr/bin",
+            "toolchainBinDir": "C:/Users/ianma/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "/home/speeep/Development/Luna/Platformio/.pio/build/megaatmega2560/firmware.elf",
+            "executable": "C:/Users/ianma/Documents/PlatformIO/Projects/Luna/Platformio/.pio/build/megaatmega2560/firmware.elf",
             "projectEnvName": "megaatmega2560",
-            "toolchainBinDir": "/home/speeep/.platformio/packages/toolchain-atmelavr/bin",
+            "toolchainBinDir": "C:/Users/ianma/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
         }
