Added type output for localization_filter odom_step data

--- a/luna_ws/src/localization_package/CMakeLists.txt
+++ b/luna_ws/src/localization_package/CMakeLists.txt
@@ -209,5 +209,6 @@ catkin_install_python(PROGRAMS
   scripts/image_subscriber.py 
   scripts/image_publisher.py 
   scripts/listener.py 
+  src/localization_filter.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
