--- a/Platformio/.vscode/settings.json
+++ b/Platformio/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "C_Cpp.default.compilerPath": "/home/speeep/.platformio/packages/toolchain-atmelavr/bin/avr-gcc"
+    "C_Cpp.default.compilerPath": "/home/speeep/.platformio/packages/toolchain-atmelavr/bin/avr-gcc",
+    "files.associations": {
+        "new": "cpp"
+    }
 }
