--- a/luna_ws/src/robot_package/CMakeLists.txt
+++ b/luna_ws/src/robot_package/CMakeLists.txt
@@ -206,5 +206,6 @@ include_directories(
 
 catkin_install_python(PROGRAMS 
   src/listener.py
+  src/watchdog.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
