--- a/luna_ws/src/control_package/CMakeLists.txt
+++ b/luna_ws/src/control_package/CMakeLists.txt
@@ -208,5 +208,6 @@ catkin_install_python(PROGRAMS
   src/e_stop.py
   src/keyboard_control.py
   src/localizer_sweeper.py
+  src/digger_control.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
