Implementing watchdog timer

--- a/luna_ws/src/control_package/CMakeLists.txt
+++ b/luna_ws/src/control_package/CMakeLists.txt
@@ -209,5 +209,6 @@ catkin_install_python(PROGRAMS
   src/keyboard_control.py
   src/localizer_sweeper.py
   src/digger_control.py
+  src/watchdog_node.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
